[gd_scene load_steps=6 format=3 uid="uid://cfxrv8uypklw8"]

[ext_resource type="Script" uid="uid://b26be4joci0ml" path="res://scene/UI/Menus/menu_setting_control.gd" id="1_hwe35"]
[ext_resource type="Texture2D" uid="uid://cf3acei12geoq" path="res://icon.svg" id="2_d4yx6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hwe35"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d4yx6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_lnxie"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d4yx6")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_5ahkq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d4yx6")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"highlight",
"speed": 5.0
}]

[node name="Control" type="Node2D"]
script = ExtResource("1_hwe35")

[node name="BG" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(14.999999, 8.4375)
sprite_frames = SubResource("SpriteFrames_hwe35")

[node name="Options" type="Node2D" parent="."]

[node name="SelectIcon" type="Node2D" parent="Options"]

[node name="SelectSprite" type="AnimatedSprite2D" parent="Options/SelectIcon"]
modulate = Color(0.8117647, 1, 0.27058825, 1)
position = Vector2(375, 249)
scale = Vector2(0.5625, 0.5078125)
sprite_frames = SubResource("SpriteFrames_lnxie")
autoplay = "default"

[node name="Buttons" type="Node2D" parent="Options"]

[node name="Back" type="Button" parent="Options/Buttons"]
offset_left = 750.0
offset_top = 748.0
offset_right = 1177.0
offset_bottom = 868.0
theme_override_font_sizes/font_size = 38
text = "Back
"

[node name="Key1" type="Node2D" parent="Options/Buttons"]

[node name="Action" type="Panel" parent="Options/Buttons/Key1"]
offset_left = 590.0
offset_top = 150.0
offset_right = 923.0
offset_bottom = 202.0

[node name="Label" type="Label" parent="Options/Buttons/Key1/Action"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key" type="Panel" parent="Options/Buttons/Key1"]
offset_left = 1000.0
offset_top = 150.0
offset_right = 1333.0
offset_bottom = 202.0

[node name="Label" type="Label" parent="Options/Buttons/Key1/Key"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key2" type="Node2D" parent="Options/Buttons"]

[node name="Action" type="Panel" parent="Options/Buttons/Key2"]
offset_left = 590.0
offset_top = 215.0
offset_right = 923.0
offset_bottom = 267.0

[node name="Label" type="Label" parent="Options/Buttons/Key2/Action"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key" type="Panel" parent="Options/Buttons/Key2"]
offset_left = 1000.0
offset_top = 215.0
offset_right = 1333.0
offset_bottom = 267.0

[node name="Label" type="Label" parent="Options/Buttons/Key2/Key"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key3" type="Node2D" parent="Options/Buttons"]

[node name="Action" type="Panel" parent="Options/Buttons/Key3"]
offset_left = 590.0
offset_top = 280.0
offset_right = 923.0
offset_bottom = 332.0

[node name="Label" type="Label" parent="Options/Buttons/Key3/Action"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key" type="Panel" parent="Options/Buttons/Key3"]
offset_left = 1000.0
offset_top = 280.0
offset_right = 1333.0
offset_bottom = 332.0

[node name="Label" type="Label" parent="Options/Buttons/Key3/Key"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key4" type="Node2D" parent="Options/Buttons"]

[node name="Action" type="Panel" parent="Options/Buttons/Key4"]
offset_left = 590.0
offset_top = 345.0
offset_right = 923.0
offset_bottom = 397.0

[node name="Label" type="Label" parent="Options/Buttons/Key4/Action"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key" type="Panel" parent="Options/Buttons/Key4"]
offset_left = 1000.0
offset_top = 345.0
offset_right = 1333.0
offset_bottom = 397.0

[node name="Label" type="Label" parent="Options/Buttons/Key4/Key"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key5" type="Node2D" parent="Options/Buttons"]

[node name="Action" type="Panel" parent="Options/Buttons/Key5"]
offset_left = 590.0
offset_top = 410.0
offset_right = 923.0
offset_bottom = 462.0

[node name="Label" type="Label" parent="Options/Buttons/Key5/Action"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key" type="Panel" parent="Options/Buttons/Key5"]
offset_left = 1000.0
offset_top = 410.0
offset_right = 1333.0
offset_bottom = 462.0

[node name="Label" type="Label" parent="Options/Buttons/Key5/Key"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key6" type="Node2D" parent="Options/Buttons"]

[node name="Action" type="Panel" parent="Options/Buttons/Key6"]
offset_left = 590.0
offset_top = 475.0
offset_right = 923.0
offset_bottom = 527.0

[node name="Label" type="Label" parent="Options/Buttons/Key6/Action"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key" type="Panel" parent="Options/Buttons/Key6"]
offset_left = 1000.0
offset_top = 475.0
offset_right = 1333.0
offset_bottom = 527.0

[node name="Label" type="Label" parent="Options/Buttons/Key6/Key"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key7" type="Node2D" parent="Options/Buttons"]

[node name="Action" type="Panel" parent="Options/Buttons/Key7"]
offset_left = 590.0
offset_top = 540.0
offset_right = 923.0
offset_bottom = 592.0

[node name="Label" type="Label" parent="Options/Buttons/Key7/Action"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Key" type="Panel" parent="Options/Buttons/Key7"]
offset_left = 1000.0
offset_top = 540.0
offset_right = 1333.0
offset_bottom = 592.0

[node name="Label" type="Label" parent="Options/Buttons/Key7/Key"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprites" type="Node2D" parent="Options"]
visible = false
z_index = 1

[node name="Back" type="AnimatedSprite2D" parent="Options/Sprites"]
position = Vector2(615, 624)
scale = Vector2(0.875, 0.78125)
sprite_frames = SubResource("SpriteFrames_5ahkq")
animation = &"highlight"
autoplay = "default"

[node name="Menus" type="Node2D" parent="Options"]

[node name="Message1" type="Node2D" parent="Options/Menus"]
visible = false

[node name="Panel" type="Panel" parent="Options/Menus/Message1"]
offset_left = -28.0
offset_top = -25.0
offset_right = 1295.0
offset_bottom = 731.0
mouse_filter = 2

[node name="Label" type="Label" parent="Options/Menus/Message1"]
offset_top = 282.0
offset_right = 1276.0
offset_bottom = 380.0
theme_override_font_sizes/font_size = 56
text = "Press a KEY to map it"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Options/Buttons/Back" to="." method="_on_back_pressed"]
